Auth module added with routes and common component to route onboarding, login, reset and logout pages, Sign-in Page UI updated with org unique tag verification, Login functionality to be added .

--- a/src/app/modules/auth/components/sign-in/sign-in.component.html
+++ b/src/app/modules/auth/components/sign-in/sign-in.component.html
@@ -1,17 +1,33 @@
-<div class="w-full h-screen flex flex-wrap content-center justify-center custom-bg-1 overflow-y-auto">
+<div class="w-full h-screen flex flex-wrap content-center justify-center overflow-y-auto">
 
-    <!-- Logo Text -->
-    <div class="w-full  text-4xl logo-f1 text-center text-white">RELEASE <span class="text-blue-300 logo-f1">TRACKER</span></div>
+    <!-- Title -->
+    <div class="w-7/12">
+        <div class="w-full font-bold text-xl">Welcome back!</div>
+        <div class="w-full text-gray-500 text-lg"><span class="text-blue-500 font-bold">Sign in</span> to your account & start tracking your releases.</div>
+    </div>
 
-    <!-- Sign In Quick Brief Text -->
-    <div class="w-full text-center text-gray-300 text-2xl pt-12">
-        Get more things done by tracking and managing <br> your software release.
+    <!-- Org Search Form -->
+    <div class="w-7/12 flex justify-center my-10" *ngIf="!isUniqueTagVerified">
+        <!-- Org Search Form -->
+        <form [formGroup]="orgSearchForm" class="w-full flex flex-wrap justify-center">
+            <!-- Organization -->
+            <mat-form-field class="w-full" appearance="outline">
+                <mat-label>Organization Unique Tag</mat-label>
+                <input class=" bg-gray-500" type="text" matInput placeholder="Enter your Organization Unique Tag" formControlName="orgUniqueTag">
+                <mat-error>Organization Unique Tag is <strong>Required!</strong></mat-error>
+            </mat-form-field>
+
+            <!-- Org Search Button -->
+            <div class="w-full flex justify-end mt-3">
+                <button mat-flat-button class="w-3/12" color="primary" (click)="verifyUniqueTag()">Verify</button>
+            </div>
+        </form>
     </div>
 
     <!-- Sign In Form -->
-    <div class="w-full flex justify-center my-10">
+    <div class="w-7/12 flex justify-center my-10" *ngIf="isUniqueTagVerified">
         <!-- Sign In Form -->
-        <form [formGroup]="signinForm" class="w-3/12" *ngIf="isRegisterFormEnabled === 'sign-in'">
+        <form [formGroup]="signinForm" class="w-full flex flex-wrap justify-center" *ngIf="isRegisterFormEnabled === 'sign-in'">
             <!-- Email -->
             <mat-form-field class="w-full" appearance="outline">
                 <!-- <mat-label>Email</mat-label> -->
@@ -29,59 +45,8 @@
             </mat-form-field>
 
             <!-- Sign In Button -->
-            <div class="w-full flex justify-center mt-3">
-                <button mat-flat-button class="" color="primary">Sign In</button>
-            </div>
-
-            <!-- Register Form Navigate -->
-            <div class="w-full text-center mt-10 text-white">
-                Not a member yet ? <span class="text-green-400 font-bold cursor-pointer" (click)="toggleRegisterForm('register')">Register Now!</span>
-            </div>
-        </form>
-
-        <!-- Register Form -->
-        <form [formGroup]="registerForm" class="w-3/12" *ngIf="isRegisterFormEnabled === 'register'">
-            <div class="w-full flex justify-between">
-                <!-- First Name -->
-                <mat-form-field class="w-6/12 pr-2" appearance="outline">
-                    <!-- <mat-label>Email</mat-label> -->
-                    <input class=" bg-gray-500" type="text" matInput placeholder="First Name" formControlName="firstName">
-                    <mat-error>First Name is <strong>Required!</strong></mat-error>
-                </mat-form-field>
-
-                <!-- Last Name -->
-                <mat-form-field class="w-6/12 pl-2" appearance="outline">
-                    <!-- <mat-label>Email</mat-label> -->
-                    <input class=" bg-gray-500" type="text" matInput placeholder="Last Name" formControlName="lastName">
-                    <mat-error>Last Name is <strong>Required!</strong></mat-error>
-                </mat-form-field>
-            </div>
-            
-
-            <!-- Email -->
-            <mat-form-field class="w-full" appearance="outline">
-                <!-- <mat-label>Email</mat-label> -->
-                <input class=" bg-gray-500" type="email" matInput placeholder="Email ID" formControlName="email">
-                <mat-error>Email is <strong>Required!</strong></mat-error>
-            </mat-form-field>
-
-            <!-- Password -->
-            <mat-form-field class="w-full" appearance="outline">
-                <input [type]="hideLoginPassword ? 'password' : 'text'" matInput placeholder="Password" formControlName="password">
-                <button mat-icon-button matSuffix (click)="hideLoginPassword = !hideLoginPassword" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hideLoginPassword">
-                    <mat-icon>{{hideLoginPassword ? 'visibility_off' : 'visibility'}}</mat-icon>
-                </button>
-                <mat-error>Password is <strong>Required!</strong></mat-error>
-            </mat-form-field>
-
-            <!-- Register Button -->
-            <div class="w-full flex justify-center mt-3">
-                <button mat-flat-button class="bg-green-400">Register</button>
-            </div>
-
-            <!-- Register Form Navigate -->
-            <div class="w-full text-center mt-6 text-white">
-                Already have an account ? <span class="text-blue-300 font-bold cursor-pointer" (click)="toggleRegisterForm('sign-in')">Sign In Now!</span>
+            <div class="w-full flex justify-end mt-3">
+                <button mat-flat-button class="w-full" color="primary">Sign In</button>
             </div>
         </form>
     </div>
