--- a/src/app/modules/auth/components/onboarding/onboarding.component.html
+++ b/src/app/modules/auth/components/onboarding/onboarding.component.html
@@ -1,24 +1,7 @@
-<div class="w-full h-screen flex">
-
-    <!-- Left Block -->
-    <div class="w-4/12 flex flex-wrap custom-bg-1 p-12">
-
-        <!-- Logo Text -->
-        <div class="w-full flex items-end text-4xl logo-f1 text-white">RELEASE <span class="text-blue-300 logo-f1 pl-2">TRACKER</span></div>
-
-        <!-- Sign In Quick Brief Text -->
-        <div class="w-full text-gray-300 text-xl mt-6">
-            Get more things done by tracking and managing your software release.
-
-            <!-- Sign-in Link -->
-            <div class="w-full mt-20 text-gray-300 text-sm">
-                Already have an account ? <span class="cursor-pointer text-blue-300 font-bold hover:underline">Login here.</span>
-            </div>
-        </div>
-    </div>
+<div class="w-full h-screen flex justify-center">
 
     <!-- Right Block -->
-    <div class="w-8/12 px-24 h-full flex flex-wrap content-center">
+    <div class="w-10/12 h-full flex flex-wrap content-center">
 
         <!-- Tabs -->
         <div class="w-full flex justify-between items-center">
