--- a/src/app/modules/auth/components/sign-in/sign-in.component.html
+++ b/src/app/modules/auth/components/sign-in/sign-in.component.html
@@ -50,7 +50,11 @@
 
             <!-- Sign In Button -->
             <div class="w-full flex justify-end mt-3">
-                <button mat-flat-button class="w-full" color="primary" [disabled]="signinForm.invalid">Sign In</button>
+                <button mat-flat-button class="w-full" color="primary" [disabled]="signinForm.invalid" (click)="memberSignIn()" *ngIf="!signInLoader">Sign In</button>
+                <div class="flex items-center" *ngIf="signInLoader">
+                    <mat-spinner [diameter]="20"></mat-spinner>
+                    <span class="ml-2">Signing In ...</span>
+                </div>
             </div>
         </form>
     </div>
