--- a/src/app/modules/main/navigation/navigation.component.html
+++ b/src/app/modules/main/navigation/navigation.component.html
@@ -26,7 +26,7 @@
                     <div class="w-full p-4 flex items-center cursor-pointer hover:text-blue-500">
                         <mat-icon class="mr-2 text-base">settings</mat-icon> Settings
                     </div>
-                    <div class="w-full p-4 flex items-center cursor-pointer hover:text-blue-500">
+                    <div class="w-full p-4 flex items-center cursor-pointer hover:text-blue-500" (click)="memberSignOut()">
                         <mat-icon class="mr-2 text-base">logout</mat-icon> Logout
                     </div>
                 </div>
