Token Interceptor Updated, signIn route added if 401 http status code, sample API integrated which gives signed-in member's details by ID.

--- a/src/app/modules/main/content/components/admin/child-components/members/member-profile/member-profile.component.html
+++ b/src/app/modules/main/content/components/admin/child-components/members/member-profile/member-profile.component.html
@@ -134,7 +134,7 @@
                                             </div>
                                             <div class="ml-4">
                                                 <div class="">Deactivate Account</div>
-                                                <div class="text-xs text-gray-500">Restricts user from login, modifying roles and permissions.</div>
+                                                <div class="text-xs text-gray-500">Restricts user from sign-in, modifying roles and permissions.</div>
                                             </div>
                                         </div>
                                     </div>
