--- a/src/app/modules/auth/auth.component.html
+++ b/src/app/modules/auth/auth.component.html
@@ -12,7 +12,7 @@
 
             <!-- Log-in Link -->
             <div class="w-full mt-20 text-gray-300 text-sm" *ngIf="!isLoginPage">
-                Already have an account ? <span class="cursor-pointer text-blue-300 font-bold hover:underline" [routerLink]="['login']" (click)="isLoginPage = true;">Login here.</span>
+                Already have an account ? <span class="cursor-pointer text-blue-300 font-bold hover:underline" [routerLink]="['signIn']" (click)="isLoginPage = true;">Login here.</span>
             </div>
 
             <!-- Onboard Link -->
