Client Save Details API integrated, Routing added, Get clients list API integrated.

--- a/src/app/modules/main/content/components/clients/components/client-create-edit/client-create-edit.component.html
+++ b/src/app/modules/main/content/components/clients/components/client-create-edit/client-create-edit.component.html
@@ -95,7 +95,7 @@
                     <!-- Action Buttons -->
                     <div class="w-full flex justify-end p-6">
                         <button mat-button class="">Cancel</button>
-                        <button mat-flat-button class="bg-blue-500 text-white" style="margin-left: 3%;">Create Client</button>
+                        <button mat-flat-button class="bg-blue-500 text-white" style="margin-left: 3%;" (click)="saveClientDetails()">Create Client</button>
                     </div>
                 </form>
                 
