--- a/src/app/modules/main/content/components/clients/clients.component.html
+++ b/src/app/modules/main/content/components/clients/clients.component.html
@@ -13,42 +13,40 @@
                 </div>
             </div>
 
-            <div class="w-full p-3">
-                <table mat-table [dataSource]="clientsList" class="w-full border border-gray-200 rounded-md">
-                  
-                    <!-- Position Column -->
-                    <ng-container matColumnDef="clientName">
-                      <th mat-header-cell *matHeaderCellDef class="text-xs font-bold"> Client Name </th>
-                      <td mat-cell *matCellDef="let element" class="text-blue-600 cursor-pointer" [routerLink]="['./', 567]"> {{element.clientName}} </td>
-                    </ng-container>
-                  
-                    <!-- Name Column -->
-                    <ng-container matColumnDef="lables">
-                      <th mat-header-cell *matHeaderCellDef class="text-xs font-bold"> Project Lables </th>
-                      <td mat-cell *matCellDef="let element" class="text-gray-600"> <span class="bg-gray-100 px-2 py-1 rounded-md mr-2 border border-gray-200" *ngFor="let tag of element.lables">{{tag}}</span> </td>
-                    </ng-container>
-                  
-                    <!-- Weight Column -->
-                    <ng-container matColumnDef="totalProjects">
-                      <th mat-header-cell *matHeaderCellDef class="text-xs font-bold"> Total Projects </th>
-                      <td mat-cell *matCellDef="let element" class="text-gray-600"> {{element.projects.length}} <span class="text-xs">Projects</span></td>
-                    </ng-container>
-                  
-                    <!-- Symbol Column -->
-                    <ng-container matColumnDef="totalReleases">
-                      <th mat-header-cell *matHeaderCellDef class="text-xs font-bold"> Total Releases </th>
-                      <td mat-cell *matCellDef="let element" class="text-gray-600"> {{element.releases.length}} <span class="text-xs">Releases</span></td>
-                    </ng-container>
+            <div class="w-full py-3">
 
-                    <!-- Weight Column -->
-                    <ng-container matColumnDef="actions">
-                      <th mat-header-cell *matHeaderCellDef class="text-xs font-bold"> Actions </th>
-                      <td mat-cell *matCellDef="let element" class="text-gray-600"> <button mat-icon-button class=""><mat-icon>more_vert</mat-icon></button> </td>
-                    </ng-container>
-                  
-                    <tr mat-header-row *matHeaderRowDef="clientsDisplayColumns" class="bg-gray-50"></tr>
-                    <tr mat-row *matRowDef="let row; columns: clientsDisplayColumns;" class="hover:bg-gray-50"></tr>
-                </table>
+              <!-- Clients List Card -->
+              <div class="w-full flex flex-wrap justify-start">
+                <div class="w-3/12 px-4" *ngFor="let client of clientsList">
+                  <div class="w-full h-64 flex flex-col border border-gray-200 rounded-2xl">
+                    <div class="w-full p-4">
+                      <!-- Status Block -->
+                      <div class="w-full flex justify-start">
+                        <span class="text-right text-xs px-3 rounded-full" [ngClass]="getStatusStyle(client.clientStatus)">{{client.clientStatus}}</span>
+                      </div>
+
+                      <!-- Card Content -->
+                      <div class="w-full mt-4">
+                        <div class="w-full text-xl">{{client.clientName}}</div>
+                        <div class="w-full text-xs text-gray-400 uppercase mt-1">{{filterClientType(client.clientType)}}</div>
+
+                        <!-- Divider -->
+                        <div class="w-full flex justify-start my-5">
+                          <div class="w-2/12 border border-gray-200"></div>
+                        </div>
+
+                        <div class="text-gray-400 flex items-center text-xs hover:text-blue-700 cursor-pointer">
+                          <mat-icon class="text-lg -mt-1">link</mat-icon> {{client.clientWebsite}}
+                        </div>
+                      </div>
+                      
+                    </div>
+                    <div class="w-full px-4 py-2 bg-gray-50 mt-auto rounded-b-2xl flex justify-end border-t border-gray-200">
+                      <button mat-button color="primary">View</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
         </div>
         
