Dialog Component Enhanced with generic approach, Members Config component updated with delete APIs, Minor UI updates.

--- a/src/app/modules/main/content/components/admin/child-components/system-configurations/members-configuration/members-configuration.component.html
+++ b/src/app/modules/main/content/components/admin/child-components/system-configurations/members-configuration/members-configuration.component.html
@@ -6,34 +6,31 @@
     </div>
 
     <!-- Memeber Title Config Content -->
-    <div class="w-full mt-10 pb-10 border-b border-gray-200">
+    <div class="w-full mt-6 pb-10 border-b border-gray-200">
         <div class="text-base">Member Titles</div>
         <div class="text-gray-500 text-xs">Defines member based on their title in the project.</div>
 
         <div class="w-6/12 flex items-center my-3" [formGroup]="memberConfigTitleForm">
             <mat-form-field class="w-9/12" appearance="outline">
+                <mat-label>Member Title</mat-label>
                 <input type="text" matInput placeholder="Add Member Title" #memberTypeInput formControlName="memberType" >
             </mat-form-field>
 
-            <button mat-flat-button color="primary" class="!-mt-5 !ml-3" *ngIf="!memberConfigTitleLoader" [disabled]="memberTypeInput.value === '' " (click)="addMemberConfigTitle()">+ Add</button>
+            <button mat-flat-button color="primary" class="!-mt-5 !ml-3" *ngIf="!memberConfigTitleLoader" [disabled]="memberTypeInput.value !== '' " (click)="addMemberConfigTitle()">+ Add</button>
             <div class="flex items-center" *ngIf="memberConfigTitleLoader">
                 <mat-spinner [diameter]="20"></mat-spinner>
-                <span class="ml-2">Adding Member Title ...</span>
+                <span class="ml-2">Adding...</span>
             </div>
         </div>
 
-        <div class="w-6/12 mt-3" *ngIf="memberConfig?.titles?.length">
-            <div class="w-full flex justify-between items-center py-1 border-b border-gray-100" *ngFor="let title of memberConfig.titles">
+        <div class="w-6/12 mt-3 border border-gray-200 rounded-md" *ngIf="memberConfig?.titles?.length">
+            <div class="w-full flex justify-between items-center py-1 px-3 border-b border-gray-200" *ngFor="let title of memberConfig.titles">
                 <div class="w-6/12">{{title.value}}</div>
                 <div class="w-auto flex items-center">
                     <div class="rounded-full px-3 py-0.5 flex items-center text-xs" [ngClass]="getStatusStyle(title.status)">{{title.status}}</div>
-                    <button mat-icon-button class="!ml-3" [matMenuTriggerFor]="memberTypeMenu">
-                        <mat-icon>more_vert</mat-icon>
+                    <button mat-icon-button color="warn" class="!ml-3" (click)="deleteMemberConfigTitle(title._id)">
+                        <mat-icon>remove_circle_outline</mat-icon>
                     </button>
-                    <mat-menu #memberTypeMenu="matMenu">
-                        <div mat-menu-item>De-activate</div>
-                        <div mat-menu-item>Remove</div>
-                    </mat-menu>
                 </div>
             </div>
         </div>
@@ -45,8 +42,8 @@
         <div class="text-base">Member Types</div>
         <div class="text-gray-500 text-xs">Defines the type of member under which member can be categorized.</div>
 
-        <div class="w-6/12 mt-6" *ngIf="memberConfig?.types?.length">
-            <div class="w-full flex justify-between items-center py-3 border-b border-gray-100" *ngFor="let type of memberConfig.types">
+        <div class="w-6/12 mt-6 border border-gray-200 rounded-md" *ngIf="memberConfig?.types?.length">
+            <div class="w-full flex justify-between items-center p-3 border-b border-gray-200" *ngFor="let type of memberConfig.types">
                 <div class="w-6/12">{{type.value}}</div>
                 <div class="w-auto flex items-center">
                     <div class="rounded-full px-3 py-0.5 flex items-center text-xs" [ngClass]="getStatusStyle(type.status)">{{type.status}}</div>
@@ -61,8 +58,8 @@
         <div class="text-base">Member Roles</div>
         <div class="text-gray-500 text-xs">Defines member's accessibility to the pages or modules on this application.</div>
 
-        <div class="w-6/12 mt-6" *ngIf="memberConfig?.roles?.length">
-            <div class="w-full flex justify-between items-center py-3 border-b border-gray-100" *ngFor="let role of memberConfig.roles">
+        <div class="w-6/12 mt-6 border border-gray-200 rounded-md" *ngIf="memberConfig?.roles?.length">
+            <div class="w-full flex justify-between items-center p-3 border-b border-gray-200" *ngFor="let role of memberConfig.roles">
                 <div class="w-6/12">{{role.value}}</div>
                 <div class="w-auto flex items-center">
                     <div class="rounded-full px-3 py-0.5 flex items-center text-xs" [ngClass]="getStatusStyle(role.status)">{{role.status}}</div>
