--- a/src/app/modules/shared/components/dialog/child-components/confirmation/confirmation.component.html
+++ b/src/app/modules/shared/components/dialog/child-components/confirmation/confirmation.component.html
@@ -10,7 +10,7 @@
     <div class="w-full mt-6">
         <div class="w-full flex justify-end">
             <button mat-stroked-button class="" color="warn">No</button>
-            <button mat-flat-button class="!ml-4" color="primary" mat-dialog-close>Confirm</button>
+            <button mat-flat-button class="!ml-4" color="primary" (click)="onConfirm()">Confirm</button>
         </div>
     </div>
 </div>
