--- a/src/app/modules/main/content/components/admin/child-components/system-configurations/members-configuration/members-configuration.component.html
+++ b/src/app/modules/main/content/components/admin/child-components/system-configurations/members-configuration/members-configuration.component.html
@@ -12,7 +12,7 @@
 
         <div class="w-6/12 flex items-center my-3" [formGroup]="memberConfigTitleForm">
             <mat-form-field class="w-9/12" appearance="outline">
-                <mat-label>Member Title</mat-label>
+                <mat-label>Add Member Title</mat-label>
                 <input type="text" matInput placeholder="Add Member Title" #memberTypeInput formControlName="memberType" >
             </mat-form-field>
 
@@ -29,7 +29,7 @@
                 <div class="w-auto flex items-center">
                     <div class="rounded-full px-3 py-0.5 flex items-center text-xs" [ngClass]="getStatusStyle(title.status)">{{title.status}}</div>
                     <!-- <button mat-icon-button color="warn" class="!ml-3" (click)="deleteMemberConfigTitle(title._id)"> -->
-                    <button mat-icon-button color="warn" class="!ml-3" (click)="navigationActions(title.value)">
+                    <button mat-icon-button color="warn" class="!ml-3" (click)="navigationActions(title)">
                         <mat-icon>remove_circle_outline</mat-icon>
                     </button>
                 </div>
