--- a/src/app/modules/main/content/components/admin/child-components/system-configurations/projects-configuration/projects-configuration.component.html
+++ b/src/app/modules/main/content/components/admin/child-components/system-configurations/projects-configuration/projects-configuration.component.html
@@ -1,1 +1,87 @@
-<p>Projects Component Working...</p>
+<div class="w-full px-16 pb-24">
+
+    <!-- Title -->
+    <div class="w-full">
+        <div class="text-xl">Projects Configuration</div>
+    </div>
+
+    <!-- Project Types Config Content -->
+    <div class="w-full mt-6 pb-10 border-b border-gray-200">
+        <div class="text-base">Project Types</div>
+        <div class="text-gray-500 text-xs">Provides an option to set the type of project.</div>
+
+        <div class="w-6/12 flex items-center my-3" [formGroup]="projectConfigTypeForm">
+            <mat-form-field class="w-9/12" appearance="outline">
+                <mat-label>Add Project Type</mat-label>
+                <input type="text" matInput placeholder="Add Project Type" #projectTypeInput formControlName="projectType" >
+            </mat-form-field>
+
+            <button mat-flat-button color="primary" class="!-mt-5 !ml-3" *ngIf="!projectConfigTypeLoader" [disabled]="projectTypeInput.value === '' " (click)="addProjectConfigType()">+ Add</button>
+            <div class="flex items-center" *ngIf="projectConfigTypeLoader">
+                <mat-spinner [diameter]="20"></mat-spinner>
+                <span class="ml-2">Adding...</span>
+            </div>
+        </div>
+
+        <div class="w-6/12 mt-3 border border-gray-200 rounded-md" *ngIf="projectConfig?.types?.length">
+            <div class="w-full flex justify-between items-center py-1 px-3 border-b border-gray-200" *ngFor="let type of projectConfig.types">
+                <div class="w-6/12">{{type.value}}</div>
+                <div class="w-auto flex items-center">
+                    <div class="rounded-full px-3 py-0.5 flex items-center text-xs" [ngClass]="getStatusStyle(type.status)">{{type.status}}</div>
+                    <button mat-icon-button color="warn" class="!ml-3" (click)="navigationActions(type)">
+                        <mat-icon>remove_circle_outline</mat-icon>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Project Status Config Content -->
+    <div class="w-full mt-6 pb-10 border-b border-gray-200">
+        <div class="text-base">Project Status</div>
+        <div class="text-gray-500 text-xs">Defines project's ongoing status.</div>
+
+        <div class="w-6/12 flex items-center my-3" [formGroup]="projectConfigStatusForm">
+            <mat-form-field class="w-9/12" appearance="outline">
+                <mat-label>Add Project Status</mat-label>
+                <input type="text" matInput placeholder="Add Project Type" #projectStatusInput formControlName="projectStatus" >
+            </mat-form-field>
+
+            <button mat-flat-button color="primary" class="!-mt-5 !ml-3" *ngIf="!projectConfigStatusLoader" [disabled]="projectStatusInput.value === '' " (click)="addProjectConfigType()">+ Add</button>
+            <div class="flex items-center" *ngIf="projectConfigStatusLoader">
+                <mat-spinner [diameter]="20"></mat-spinner>
+                <span class="ml-2">Adding...</span>
+            </div>
+        </div>
+
+        <div class="w-6/12 mt-3 border border-gray-200 rounded-md" *ngIf="projectConfig?.status.length">
+            <div class="w-full flex justify-between items-center py-1 px-3 border-b border-gray-200" *ngFor="let status of projectConfig.status">
+                <div class="w-6/12">{{status.value}}</div>
+                <div class="w-auto flex items-center">
+                    <div class="rounded-full px-3 py-0.5 flex items-center text-xs" [ngClass]="getStatusStyle(status.status)">{{status.status}}</div>
+                    <button mat-icon-button color="warn" class="!ml-3" (click)="navigationActions(status)">
+                        <mat-icon>remove_circle_outline</mat-icon>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Project Members Limit Config Content -->
+    <div class="w-full mt-6 pb-10 border-b border-gray-200">
+        <div class="text-base">Project Members Limit</div>
+        <div class="text-gray-500 text-xs">Sets maximum number of members to be mapped to a single project.</div>
+
+        <div class="w-6/12 flex items-center my-3" [formGroup]="projectConfigMembersLimitForm">
+            <mat-form-field class="w-2/12" appearance="outline">
+                <input type="number" matInput placeholder="" #projectMembersLimitInput formControlName="projectMembersLimit" >
+            </mat-form-field>
+
+            <button mat-button color="primary" class="!-mt-5 !ml-3" *ngIf="!projectConfigMembersLimitLoader" [disabled]="projectMembersLimitInput.value === '' " (click)="addProjectConfigType()">Update</button>
+            <div class="flex items-center" *ngIf="projectConfigMembersLimitLoader">
+                <mat-spinner [diameter]="20"></mat-spinner>
+                <span class="ml-2">Updating...</span>
+            </div>
+        </div>
+    </div>
+</div>
